--- a/meteor/imports/ui/components/input/index.css
+++ b/meteor/imports/ui/components/input/index.css
@@ -31,3 +31,9 @@
     background-color: #111111;
     cursor: pointer;
 }
+
+.link-open-st-info {
+    cursor: pointer;
+    color: #000;
+    text-decoration: none;
+}
