--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -94,9 +94,17 @@
                 {{#with s}}
                     <div class="popup popup-{{name}}">
                         <div class="content-block">
-                            <p>{{#with metadata}}{{name}}{{/with}}</p>
-                            <p><a href="#" class="close-popup">Close popup</a></p>
-                            <p>{{#with metadata}}{{description}}{{/with}}</p>
+                            {{#with metadata}}
+                                <p>{{name}}</p>
+                                <p><a href="#" class="close-popup">Close popup</a></p>
+                                <p>Einheit: {{unit}}</p>
+                                <p>{{{description}}}</p><!--Three { are required for html Tags!-->
+                                {{#with m}}
+                                    {{#each a in age}}
+                                        {{a}}
+                                    {{/each}}
+                                {{/with}}
+                            {{/with}}
                         </div>
                     </div>
                 {{/with}}
