Added admin login and fIxed UI bugs

--- a/meteor/imports/ui/components/config/athletes/right/index.html
+++ b/meteor/imports/ui/components/config/athletes/right/index.html
@@ -97,7 +97,8 @@
                     <!-- Spacing -->
                     <div class="col-10"></div>
                     <!-- Submit button -->
-                    <div class="col-80"><p><a href="#" class="button button-fill color-green">Athlet hinzufügen</a></p>
+                    <div class="col-80"><p><a href="#" disabled id="btn-add-athlete2"
+                                              class="button button-fill color-green">Athlet duplizieren</a></p>
                     </div>
                     <!-- Spacing -->
                     <div class="col-10"></div>
