--- a/meteor/imports/ui/components/config/codes/index.html
+++ b/meteor/imports/ui/components/config/codes/index.html
@@ -107,8 +107,7 @@
                                                                                             <i class="icon icon-form-checkbox"></i>
                                                                                         </div>
                                                                                         <div class="item-inner">
-                                                                                            <div class="item-title">{{#with
-                                                                                                    account}}{{name}}{{/with}}</div>
+                                                                                            <div class="item-title">{{name}}</div>
                                                                                         </div>
                                                                                     </label>
                                                                                 </li>
