Updated print layout

--- a/meteor/imports/ui/components/config/codes/index.css
+++ b/meteor/imports/ui/components/config/codes/index.css
@@ -3,3 +3,42 @@
     color: #000;
     text-decoration: none;
 }
+
+@media print {
+    html, body, body * {
+        width: 100%;
+        visibility: hidden;
+    }
+
+    .printcontent * {
+        visibility: visible;
+    }
+
+    .printcontent {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+    }
+
+    .printcontent-content {
+        margin-top: 0px;
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .print-password-title {
+        width: 100%;
+        font-size: xx-large;
+    }
+
+    .print-name-field {
+        text-align: left;
+    }
+
+    .print-password-field {
+        text-align: right;
+    }
+}
