generate better competition names & added notice to config

--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -118,7 +118,7 @@
     {{#with sportType}}
         <div class="content-block-title">
             <a href="#" data-popup=".popup-{{name}}" class="link-open-st-info open-popup">
-                {{#with metadata}}{{name}}{{/with}}
+                {{#with metadata}}{{name}}{{/with}} <i class="f7-icons" style="font-size: 12px">info</i>
             </a>
         </div>
         <div class="list-block">
