--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -1,78 +1,111 @@
 <template name="output">
-    <div class="view navbar-through">
+    <!-- Group selection -->
+    <div class="panel-overlay"></div>
+    <div class="panel panel-left panel-cover">
+        <div class="content-block">
+            <p class="panel-title">Gruppen</p>
 
-        <!-- Group selection -->
-        <div class="panel-overlay"></div>
-
-        <div class="panel panel-left panel-reveal">
-            <div class="content-block">
-                <p>Gruppe A</p>
-                <p>Gruppe B</p>
-                <p>Gruppe C</p>
+            <div class="contacts-content">
+                <div class="list-block contacts-block">
+                    <ul>
+                        <li class="athlete">
+                            <div class="contact-content">
+                                <div class="item-inner">
+                                    <div class="item-title">Gruppe A</div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="athlete">
+                            <div class="contact-content">
+                                <div class="item-inner">
+                                    <div class="item-title">Gruppe B</div>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="athlete">
+                            <div class="contact-content">
+                                <div class="item-inner">
+                                    <div class="item-title">Gruppe C</div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
+    </div>
 
-        <!-- Navbar -->
-        <div class="navbar">
-            <div class="navbar-inner">
-                <div class="left">
-                    <a href="#" class="link">
-                        <i class="icon icon-bars"></i>
-                        <span>Gruppen</span>
-                    </a>
-                </div>
-                <div class="center">Gruppenname</div>
-                <div class="right">
-                    <a href="#" class="link">Abmelden</a>
+    <div class="pages">
+        <div data-page="index" class="page navbar-fixed">
+
+            <!-- Navbar -->
+            <div class="navbar">
+                <div class="navbar-inner">
+                    <div class="left">
+                        <a href="#" class="link open-panel">
+                            <i class="icon icon-bars"></i>
+                            <span>Gruppen</span>
+                        </a>
+                    </div>
+                    <div class="center">Gruppenname</div>
+                    <div class="right">
+                        <a href="#" class="link">Abmelden</a>
+                    </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Page content -->
-        <div class="content-block-title">Teilnehmername</div>
-        <div class="list-block accordion-list">
-            <ul>
-                <li class="accordion-item"><a href="#" class="item-content item-link">
-                    <div class="item-inner">
-                        <div class="item-title">Gesamtpunktzahl</div>
-                    </div></a>
-                    <div class="accordion-item-content">
-                        <div class="content-block">
-                            <p>Gesamtpunktzahl</p>
-                        </div>
-                    </div>
-                </li>
-                <li class="accordion-item"><a href="#" class="item-content item-link">
-                    <div class="item-inner">
-                        <div class="item-title">Urkunde</div>
-                    </div></a>
-                    <div class="accordion-item-content">
-                        <div class="content-block">
-                            <p>Urkundenart, z.B. Ehrenurkunde</p>
-                        </div>
-                    </div>
-                </li>
-                <li class="accordion-item"><a href="#" class="item-content item-link">
-                    <div class="item-inner">
-                        <div class="item-title">Sportart 1</div>
-                    </div></a>
-                    <div class="accordion-item-content">
-                        <div class="content-block">
-                            <p>Messwerte für Sportart 1</p>
-                        </div>
-                    </div>
-                </li>
-                <li class="accordion-item"><a href="#" class="item-content item-link">
-                    <div class="item-inner">
-                        <div class="item-title">Sportart 2</div>
-                    </div></a>
-                    <div class="accordion-item-content">
-                        <div class="content-block">
-                            <p>Messwerte für Sportart 2</p>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+            <!-- Page content -->
+            <div class="page-content">
+                <div class="content-block-title">Teilnehmername</div>
+                <div class="list-block accordion-list">
+                    <ul>
+                        <li class="accordion-item"><a href="#" class="item-content item-link">
+                            <div class="item-inner">
+                                <div class="item-title">Gesamtpunktzahl</div>
+                            </div>
+                        </a>
+                            <div class="accordion-item-content">
+                                <div class="content-block">
+                                    <p>Gesamtpunktzahl</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="accordion-item"><a href="#" class="item-content item-link">
+                            <div class="item-inner">
+                                <div class="item-title">Urkunde</div>
+                            </div>
+                        </a>
+                            <div class="accordion-item-content">
+                                <div class="content-block">
+                                    <p>Urkundenart, z.B. Ehrenurkunde</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="accordion-item"><a href="#" class="item-content item-link">
+                            <div class="item-inner">
+                                <div class="item-title">Sportart 1</div>
+                            </div>
+                        </a>
+                            <div class="accordion-item-content">
+                                <div class="content-block">
+                                    <p>Messwerte für Sportart 1</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="accordion-item"><a href="#" class="item-content item-link">
+                            <div class="item-inner">
+                                <div class="item-title">Sportart 2</div>
+                            </div>
+                        </a>
+                            <div class="accordion-item-content">
+                                <div class="content-block">
+                                    <p>Messwerte für Sportart 2</p>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </div>
 
