--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -57,49 +57,39 @@
             <!-- Page content -->
             <div class="page-content">
                 <div class="content-block-title">Teilnehmername</div>
-                <div class="list-block accordion-list">
+                <div class="list-block">
                     <ul>
-                        <li class="accordion-item"><a href="#" class="item-content item-link">
-                            <div class="item-inner">
-                                <div class="item-title">Gesamtpunktzahl</div>
+                        <li>
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title label">Gesamtpunktzahl</div>
+                                    <div class="item-after">
+                                        Punkte
+                                    </div>
+                                </div>
                             </div>
-                        </a>
-                            <div class="accordion-item-content">
-                                <div class="content-block">
-                                    <p>Gesamtpunktzahl</p>
+                        </li>
+                        <li>
+                            <div class="item-content">
+                                <div class="item-inner">
+                                    <div class="item-title label">Urkunde</div>
+                                    <div class="item-after">
+                                        Ehrenurkunde
+                                    </div>
                                 </div>
                             </div>
                         </li>
                         <li class="accordion-item"><a href="#" class="item-content item-link">
                             <div class="item-inner">
-                                <div class="item-title">Urkunde</div>
+                                <div class="item-title">Einzelpunkte</div>
                             </div>
                         </a>
                             <div class="accordion-item-content">
-                                <div class="content-block">
-                                    <p>Urkundenart, z.B. Ehrenurkunde</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="accordion-item"><a href="#" class="item-content item-link">
-                            <div class="item-inner">
-                                <div class="item-title">Sportart 1</div>
-                            </div>
-                        </a>
-                            <div class="accordion-item-content">
-                                <div class="content-block">
-                                    <p>Messwerte für Sportart 1</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="accordion-item"><a href="#" class="item-content item-link">
-                            <div class="item-inner">
-                                <div class="item-title">Sportart 2</div>
-                            </div>
-                        </a>
-                            <div class="accordion-item-content">
-                                <div class="content-block">
-                                    <p>Messwerte für Sportart 2</p>
+                                <div class="content-block" style="padding-left: 10%">
+                                    <p>Sportart 1: 42</p>
+                                    <p>Sportart 2: 100</p>
+                                    <p>Sportart 3: 4000000000</p>
+                                    <p>Sportart 4: -156</p>
                                 </div>
                             </div>
                         </li>
