Output UI shows data

--- a/meteor/imports/ui/components/config/home/main/index.html
+++ b/meteor/imports/ui/components/config/home/main/index.html
@@ -19,7 +19,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Name</div>
                                     <div class="item-input" id="current-contest-name">
-                                        Loading...
+                                        Daten laden...
                                     </div>
                                 </div>
                             </div>
@@ -29,7 +29,7 @@
                                 <div class="item-inner">
                                     <div class="item-title label">Wettkampfart</div>
                                     <div class="item-input" id="current-contest-type">
-                                        Loading...
+                                        Daten laden...
                                     </div>
                                 </div>
                             </div>
