--- a/meteor/imports/ui/components/input/index.html
+++ b/meteor/imports/ui/components/input/index.html
@@ -38,7 +38,7 @@
                         </a>
                     </div>
                     <div class="center" style="overflow-x: auto; overflow-y: hidden">{{nameByID athlete_id}}</div>
-                    <div class="right"><a href="#" class="logout-button open-login-screen">Abmelden</a></div>
+                    <div class="right"><a href="#" class="logout-button">{{last_login}} abmelden</a></div>
                 </div>
             </div>
 
