--- a/meteor/imports/ui/components/config/codes/index.css
+++ b/meteor/imports/ui/components/config/codes/index.css
@@ -1,9 +1,3 @@
-.btn-select-custom, .btn-select-custom * {
-    cursor: pointer;
-    color: #000;
-    text-decoration: none;
-}
-
 @media print {
     html, body, body * {
         width: 100%;
@@ -24,9 +18,9 @@
     }
 
     .printcontent-content {
-        margin-top: 0px;
-        margin-left: 0px;
-        margin-right: 0px;
+        margin-top: 0;
+        margin-left: 0;
+        margin-right: 0;
     }
 
     .print-password-title {
