Refresh for output ui

--- a/meteor/imports/ui/components/output/index.html
+++ b/meteor/imports/ui/components/output/index.html
@@ -3,7 +3,8 @@
     <div class="panel-overlay"></div>
     <div class="panel panel-left panel-cover">
         <div class="content-block">
-            <p class="panel-title">Gruppen</p>
+            <p class="panel-title">Gruppen <a style="color: white;" href="" id="btn_refresh"><i
+                    class="f7-icons">refresh</i></a></p>
 
             <div class="contacts-content">
                 <div class="list-block contacts-block">
