Added back button to login page

--- a/meteor/imports/ui/components/login/login/index.html
+++ b/meteor/imports/ui/components/login/login/index.html
@@ -16,15 +16,18 @@
                         </li>
                     </ul>
                 </div>
-                <div class="list-block">
-                    <ul>
-                        <li>
+                <table align="center">
+                    <tr>
+                        <td style="border-right: 1px solid lightgrey; padding-right: 20px;">
+                            <a href="#" class="item-link list-button login-back-button">Zurück</a>
+                        </td>
+                        <td style="padding-left: 20px;">
                             <a href="#" class="item-link list-button login-button" data-type="{{type}}">Anmelden</a>
-                        </li>
-                    </ul>
-                    <div class="list-block-label">Bitte melden sie sich mit dem Passwort an, welches sie von dem
-                        Administrator erhalten haben.
-                    </div>
+                        </td>
+                    </tr>
+                </table>
+                <div class="list-block-label">Bitte melden sie sich mit dem Passwort an, welches sie von dem
+                    Administrator erhalten haben.
                 </div>
             </div>
         </div>
