--- a/meteor/imports/ui/components/login/index.html
+++ b/meteor/imports/ui/components/login/index.html
@@ -3,7 +3,7 @@
         <div class="page">
             <div class="page-content login-screen-content">
                 <div class="login-screen-title">RunItEasy</div>
-                <div id="login-swiper" class="swiper-container">
+                <div id="login-swiper" class="swiper-container" style="height: calc(100% - 92px);">
                     <div class="swiper-wrapper">
                         {{#each steps}}
                             {{#with this}}
