Centered text on login page

--- a/meteor/imports/ui/components/login/login/index.html
+++ b/meteor/imports/ui/components/login/login/index.html
@@ -26,7 +26,8 @@
                         </td>
                     </tr>
                 </table>
-                <div class="list-block-label" style="margin-left: 10%; margin-right: 10%">Bitte melden sie sich mit dem
+                <div class="list-block-label" style="padding-left: 10%; padding-right: 10%">Bitte melden sie sich mit
+                    dem
                     Passwort an, welches sie von dem
                     Administrator erhalten haben.
                 </div>
