Fixed the gorilla showing up at times it should stay inside its cage

--- a/meteor/imports/ui/components/offline/index.html
+++ b/meteor/imports/ui/components/offline/index.html
@@ -1,5 +1,5 @@
 <template name="offline">
-    <div class="login-screen {{#if isOffline}}modal-in{{/if}}">
+    <div class="login-screen offline {{#if isOffline}}modal-in{{/if}}">
         <div class="view">
             <div class="page">
                 <div class="page-content login-screen-content">
