--- a/meteor/imports/ui/components/login/index.html
+++ b/meteor/imports/ui/components/login/index.html
@@ -2,7 +2,7 @@
     <div class="view">
         <div class="page">
             <div class="page-content login-screen-content">
-                <div class="login-screen-title">RunItEasy</div>
+                <div class="login-screen-title">RunItEasy{{#if firstLoggedIn}} | {{firstLoggedIn}}{{/if}}</div>
                 <div id="login-swiper" class="swiper-container" style="height: calc(100% - 92px);">
                     <div class="swiper-wrapper">
                         {{#each steps}}
